--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body background="https://www.shutterstock.com/image-vector/vintage-seamless-texture-moustaches-on-260nw-143169751.jpg">
 
   <center>
-    <h3 class="btn btn-info">Lipstick Filter App</h3> 
+    <h3 class="btn btn-info">Mustache Filter App</h3> 
     <br><br>
     <button class="take_snapshot" onclick="take_snapshot()" >Take Snapshot</button>
   </center>
